--- a/css/styles.css
+++ b/css/styles.css
@@ -615,7 +615,7 @@ background-color: var(--button-hover);
     display: block
 }
 
-
+/*-----------------------------------*/
 .backdrop {
     position: fixed;
     height: 100%;
@@ -669,7 +669,7 @@ background-color: var(--button-hover);
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.close-btn:is(:hover, :focus) {
+.btn-close:is(:hover, :focus) {
     color: var(--white);
     background-color: var(--button-hover);
     border: transparent;
@@ -678,3 +678,68 @@ background-color: var(--button-hover);
 .close-icon {
     fill: currentColor;
 }
+
+.modal-title {
+    margin-top: 74px;
+    margin-bottom: 16px;
+    font-weight: 500;
+    text-align: center;
+    letter-spacing: 0.02em;
+    color: var(--main-text-color);
+}
+
+
+.modal-label {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    margin-bottom: 8px;
+
+    font-size: 12px;
+    letter-spacing: 0.04em;
+    line-height: 1.17;
+    color: var(--light-border);
+}
+
+.modal-label:nth-child(4) {
+    margin-bottom: 16px;
+}
+.modal-label:nth-child(5) {
+    position: relative;
+    flex-direction: row;
+    align-items: center;
+    gap: 0;
+    margin-bottom: 24px;
+    line-height: 1.33;
+    letter-spacing: 0.04em;
+}
+
+.modal-wrap {
+    position: relative;
+}
+
+.modal-input {
+    width: 100%;
+    height: 40px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    
+        
+}
+.modal-icon {}
+
+.modal-texterea {}
+
+.modal-checkbox {}
+
+.checkbox-icon {}
+
+.click {}
+
+.privacy-link {}
+
+.link {}
+
+.submit-btn {}
+
+.btn {}
