--- a/css/styles.css
+++ b/css/styles.css
@@ -639,6 +639,7 @@ background-color: var(--button-hover);
     transform: translate(-50%, -50%);
     width: 408px;
     height: 576px;
+    padding: 24px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -680,7 +681,7 @@ background-color: var(--button-hover);
 }
 
 .modal-title {
-    margin-top: 74px;
+    margin-top: 24px;
     margin-bottom: 16px;
     font-weight: 500;
     text-align: center;
