--- a/css/styles.css
+++ b/css/styles.css
@@ -706,7 +706,7 @@ background-color: var(--button-hover);
     transform: translate(-50%, -50%);
     width: 408px;
     height: 584px;
-    padding: 72px;
+    padding: 24px;
     background-color: #FCFCFC;
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
             0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -714,6 +714,7 @@ background-color: var(--button-hover);
 }
 
 .modal-title {
+    margin-top: 24px;
     margin-bottom: 16px;
     font-weight: 500;
     text-align: center;
@@ -722,9 +723,7 @@ background-color: var(--button-hover);
 }
 
 .btn-close {
-    position: absolute;
-    top: 24px;
-    right: 24px;
+    margin-left: auto;
     display: flex;
     justify-content: center;
     align-items: center;
